--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@emotion/styled": "^11.11.0",
 		"@mui/icons-material": "^5.14.8",
 		"@mui/material": "^5.14.8",
+		"@prisma/client": "^5.3.1",
 		"@types/node": "20.6.0",
 		"@types/react": "18.2.21",
 		"@types/react-dom": "18.2.7",
@@ -22,6 +23,7 @@
 		"eslint-config-next": "13.4.19",
 		"immer": "^10.0.2",
 		"next": "13.4.19",
+		"prisma": "^5.3.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"typescript": "5.2.2",
